--- a/src/styles.scss
+++ b/src/styles.scss
@@ -301,7 +301,7 @@ split-gutter{
 	background-color: $color3 !important;
 	.full-container{
 		display: flex !important;
-		flex-flow: row nowrap !important;
+		//flex-flow: row nowrap !important;
 		/*.seg2{
 			display: flex !important;
 			position: absolute !important;
